legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr67714.c-4.8.2-1.out.txt
pr67714.c: In function ‘fn1’:
pr67714.c:8:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i < 1; i++)
   ^
pr67714.c:8:3: note: use option -std=c99 or -std=gnu99 to compile your code
